--- a/styles/style.css
+++ b/styles/style.css
@@ -1,137 +1,28 @@
 :root {
-    --primary-color: #006400;
-    --secondary-color: #ffdf00;
-    --footer-height: 50px;
+    --foreground-color: #66ff66;
+    --background-color: #2b2b2b;
 }
 
-#page-container {
-    position: relative;
-    min-height: 100vh;
+html {
+    color: var(--foreground-color);
+    background-color: var(--background-color);
+    font-family: 'Cascadia Code', sans-serif;
 }
 
-#content-wrap {
-    padding: 10px;
-    padding-bottom: var(--footer-height);
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-body {
-    margin: 0;
-    color: var(--secondary-color);
-    background-color: var(--primary-color);
+.section-container {
+    padding: 15px;
+    border: 1px solid var(--foreground-color);
+    flex-basis: 45%;
 }
 
-header,
-main {
-    background-color: rgba(155,17,30,0.6);
-    border: 1px var(--secondary-color) solid;
-}
-
-header {
-    padding: 0px 10px;
-}
-
-header p {
-    margin: 0px;
-}
-
-main {
-    margin-top: 10px;
-    margin-bottom: 50px;
-    
-    padding: 10px 10px;
-    text-align: center;
-}
-
-footer {
-    position: absolute;
-    bottom: 0;
-	width: 100%;
-    height: var(--footer-height);
-	text-align: center;
-	align-items: center;
-	border-top: 1px solid var(--secondary-color);
-	border-image: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255,223,0,0.6) 10% 90%, rgba(0,0,0,0) 100%) 1;
-    background-color: rgba(155,17,30,0.6);
-	background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(155,17,30,0.6) 10% 90%, rgba(0,0,0,0) 100%);
-}
-
-.showcase-case img {
-    height: 200px;
-    width: 400px;
-}
-
-button {
-    height: 30px;
-    width: 120px;
-    border-radius: 8px;
-    border-color: var(--secondary-color);
-    background-color: rgb(0, 100, 0, 0.5);
-    color: var(--secondary-color);
-    cursor: pointer;
-}
-
-.button-mini {
-    height: 25px;
-    width: 100px;
-}
-
-.page-header {
-    text-align: center;
-}
-
-a {
-    color: lightgreen;
-}
-
-a:link {
-    color: lightgreen;
-}
-
-a:visited {
-    color: lightgreen;
-}
-
-a:hover {
-    color: lightskyblue;
-}
-
-.media-section {
-    text-align: right;
-}
-
-.iconify {
-    height: 25px;
-    width: 25px;
-}
-
-.item1 {
-    grid-area: logo;
-}
-
-.item2 {
-    grid-area: nav;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-areas: 'logo nav';
-}
-
-.navBar {
-    list-style-type: none;
-    text-align: right;
-}
-
-.navBar li {
-    display: inline-block;
-}
-
-#logo {
-    width: 50px;
-    height: 50px;
-}
-
-#portrait {
-    width: 250px;
-    height: 250px;
+.section-title {
+    padding-left: 5px;
+    padding-right: 5px;
 }
