--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,11 @@ html {
     font-family: 'Cascadia Code', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .flex-container {
     display: flex;
     flex-direction: row;
@@ -17,7 +22,6 @@ html {
 }
 
 .section-container {
-    padding: 15px;
     border: 1px solid var(--foreground-color);
     flex-basis: 45%;
 }
@@ -25,4 +29,35 @@ html {
 .section-title {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.carousel {
+    position: relative;
+}
+
+.slide {
+    padding: 15px;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 5px;
+    background-color: var(--background-color);
+}
+
+.prev {
+    left: -22px;
+}
+
+.next {
+    right: -22px;
+}
+
+.slide-counter {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
