--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,30 @@
 :root {
     --foreground-color: #66ff66;
     --background-color: #2b2b2b;
+    --accent-color: #ffff99;
+    --focus-color: #ff0000;
 }
 
 html {
     color: var(--foreground-color);
     background-color: var(--background-color);
     font-family: 'Cascadia Code', sans-serif;
+}
+
+a:link {
+    color: var(--accent-color);
+}
+
+a:visited {
+    color: var(--accent-color);
+}
+
+a:hover {
+    color: var(--focus-color);
+}
+
+a:active {
+    color: var(--focus-color);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -42,22 +60,32 @@ h1, h2, h3, h4, h5, h6 {
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 0;
+    height: 100%;
     padding: 5px;
-    background-color: var(--background-color);
+    background-color: rgb(102, 255, 102, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgb(102, 255, 102, 0.2);
+    color: var(--foreground-color)
 }
 
 .prev {
-    left: -22px;
+    left: -12px;
+    border-radius: 0 10px 0 0;
 }
 
 .next {
-    right: -22px;
+    right: -12px;
+    border-radius: 10px 0 0 0;
 }
 
 .slide-counter {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: -10px;
+    right: 20px;
 }
