Created zoomable images
Added modal so that users can click on an image to "zoom in".

--- a/styles/style.css
+++ b/styles/style.css
@@ -167,3 +167,42 @@ h1, h2, h3, h4, h5, h6 {
     border: 2px solid var(--background-color);
     border-radius: 15px;
 }
+
+.zoomable-img {
+    cursor: pointer;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.9); 
+    text-align: center;
+}
+
+.zoom-modal-content {
+    width: 80%;
+}
+
+.zoom-modal-close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: var(--foreground-color);
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.zoom-modal-close:hover,
+.zoom-modal-close:focus {
+    color: var(--focus-color);
+    text-decoration: none;
+    cursor: pointer;
+}
