--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6 {
     right: 20px;
 }
 
-.contact-content {
+.connect-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -115,19 +115,19 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
 }
 
-.contact-summary {
+.connect-summary {
     text-align: center;
     align-self: center;
 }
 
-.contact-image {
+.connect-image {
     width: 175px;
     height: 175px;
     border-radius: 10px;
     margin: 10px;
 }
 
-.contact-icon {
+.connect-icon {
     width: 50px;
     height: 50px;
     margin: 10px;
