--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6 {
     box-sizing: border-box;
     margin: 1%;
     margin-top: 0;
+    height: auto;
 }
 
 .section-container.half-width {
@@ -64,6 +65,10 @@ h1, h2, h3, h4, h5, h6 {
 .section-title {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.zoomable-img {
+    cursor: pointer;
 }
 
 .carousel {
@@ -174,6 +179,12 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1px;
 }
 
+#ocajse8-badge {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+}
+
 #selected-skill-summary {
     text-align: center;
     margin-top: 10px;
@@ -194,10 +205,6 @@ h1, h2, h3, h4, h5, h6 {
     background-color: var(--foreground-color);
     border: 2px solid var(--background-color);
     border-radius: 15px;
-}
-
-.zoomable-img {
-    cursor: pointer;
 }
 
 .modal {
