--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,19 @@ h6 {
     margin-bottom: 0;
 }
 
+h1,
+h2,
+h3 {
+    margin-bottom: 5px;
+}
+
+h4,
+h5,
+h6 {
+    margin-bottom: 2px;
+    font-weight: normal;
+}
+
 .focused {
     color: var(--focus-color);
 }
