Adds GitHub certification
Adds GitHub Foundations certification to the certification section.

Also updates the style to be more consistent for certification badges.

--- a/styles/style.css
+++ b/styles/style.css
@@ -200,10 +200,21 @@ h6 {
     margin: 1px;
 }
 
+.certificate-badge-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.certificate-badge {
+    margin-top: 10px;
+    max-height: 250px;
+}
+
 #ocajse8-badge {
     width: 100%;
     height: auto;
-    margin-top: 10px;
 }
 
 #selected-skill-summary {
